--- a/CARW/templates/main/login.html
+++ b/CARW/templates/main/login.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div clas="caja-login">
+    <div clas="login-box">
         <img src="{{url_for('static', filename='img/logo.jpg')}}" alt="logo CW">
         <h1>Ingrese aqui</h1>
         <form>
