--- a/CARW/static/css/master.css
+++ b/CARW/static/css/master.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url(../img/lavado-y-aspirado-domicilio-tulum-2-1024x684.jpg) no-repeat center top;
+    background: url(../img/fondo\ lavado.jpg) no-repeat center top;
     background-size: cover;
     font-family: sans-serif;
     height: 100vh;
@@ -10,10 +10,67 @@ body {
 .login-box {
     width: 320px;
     height: 420px;
-    background: #000;
+    background: rgba(0, 0, 0, 0.796);
     color: #fff;
     top: 50%;
     left: 50%;
     position: absolute;
     transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+    border-radius: 15%;
+}
+
+.login-box .avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    top: -50px;
+    left: calc(50% - 50px);
+}
+
+.login-box h1 {
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size: 22px;
+}
+
+.login-box label {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    display: block;
+}
+
+.login-box input {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.login-box input[type="text"],
+.login-box input[type="password"] {
+    border: none;
+    border-bottom: lpx solid #fff;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    color: #fff;
+    font-size: 16px;
+}
+
+.login-box a {
+    color: #fff;
+    line-height: 20px;
+    text-decoration: none;
+}
+
+.login-box a:hover {
+    color: blue;
+}
+
+.login-box button[class="btn-login"] {
+    position: absolute;
+    left: calc(50% - 50px);
 }
