--- a/CARW/templates/main/login.html
+++ b/CARW/templates/main/login.html
@@ -10,22 +10,24 @@
 </head>
 
 <body>
-    <div clas="login-box">
-        <img src="{{url_for('static', filename='img/logo.jpg')}}" alt="logo CW">
+    <div class="login-box">
+        <img class="avatar" src="{{url_for('static', filename='img/logo.jpg')}}" alt="logo CW">
         <h1>Ingrese aqui</h1>
         <form>
             <label for="nombre usuario">Nombre De Usuario</label>
-            <input type="text" placeholder="coloque su usuario">
+            <input id="nombre" type="text" placeholder="coloque su usuario">
 
             <label for="contraseña">Contraseña</label>
-            <input type="password" placeholder="coloque su contraseña">
+            <input id="contraseña" type="password" placeholder="coloque su contraseña">
 
-            <input type="submit" value="Ingresar">
-
-            <a href="#">Olvidaste tu contraseña?</a>
+            <button class="btn-login" type="submit">Ingresar &nbsp; <i class="zmdi zmdi-arrow-right"></i></button></br>
+            </br>
+            <a href="#">Olvidaste tu contraseña?</a></br>
+            </br>
             <a href="#">Deseas Registrarte ?</a>
         </form>
     </div>
 </body>
+<script src="{{url_for( 'static', filename='js/login.js' )}} "></script>
 
 </html>
