--- a/CARW/templates/main/login.html
+++ b/CARW/templates/main/login.html
@@ -20,7 +20,7 @@
             <label for="contraseña">Contraseña</label>
             <input id="contraseña" type="password" placeholder="coloque su contraseña">
 
-            <button class="btn-login" type="submit" onclick="ingresar">Ingresar</button></br>
+            <button class="btn-login" type="submit" onclick="ingresar()">Ingresar</button></br>
             </br>
             <a href="#">Olvidaste tu contraseña?</a></br>
             </br>
