--- a/CARW/templates/main/login.html
+++ b/CARW/templates/main/login.html
@@ -1,35 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "./layout.html" %} {% block body %}
+<div class="login-box">
+    <img class="avatar" src="{{url_for('static', filename='img/logo.jpg')}}" alt="logo CW">
+    <h1>Ingrese aqui</h1>
+    <form>
+        <label for="nombre usuario">Nombre De Usuario</label>
+        <input id="nombre" type="text" placeholder="coloque su usuario">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login carwash</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='css/master.css')}}">
-</head>
+        <label for="contraseña">Contraseña</label>
+        <input id="contraseña" type="password" placeholder="coloque su contraseña">
 
-<body>
-    <div class="login-box">
-        <img class="avatar" src="{{url_for('static', filename='img/logo.jpg')}}" alt="logo CW">
-        <h1>Ingrese aqui</h1>
-        <form>
-            <label for="nombre usuario">Nombre De Usuario</label>
-            <input id="nombre" type="text" placeholder="coloque su usuario">
-
-            <label for="contraseña">Contraseña</label>
-            <input id="contraseña" type="password" placeholder="coloque su contraseña">
-
-            <button class="btn-login" type="submit" onclick="ingresar()">Ingresar</button></br>
-            </br>
-            <a href="#">Olvidaste tu contraseña?</a></br>
-            </br>
-            <a href="#">Deseas Registrarte ?</a>
-        </form>
-    </div>
-    <script src="{{url_for('static', filename='js/login.js')}} "></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-</body>
-
-
-</html>
+        <button class="btn-login" type="submit" onclick="ingresar()">Ingresar</button></br>
+        </br>
+        <a href="#">Olvidaste tu contraseña?</a></br>
+        </br>
+        <a href="#">Deseas Registrarte ?</a>
+    </form>
+</div>
+<script src="{{url_for('static', filename='js/login.js')}} "></script>
+{% endblock %}
