--- a/CARW/templates/layout.html
+++ b/CARW/templates/layout.html
@@ -10,8 +10,41 @@
 </head>
 
 <body>
+    <nav>
+        <ul class="menu-horizontal">
+            <li>
+                <a href="#">Opciones De Lavado</a>
+                <ul class="menu-vertical">
+                    <li><a onclick="gopredeterminados()">Lavados Predeterminados </a></li>
+                    <li><a onclick="goeditables()">Lavados Editables</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Pagos</a>
+                <ul class="menu-vertical">
+                    <li><a href="#">Centro De Pago</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Turnos</a>
+                <ul class="menu-vertical">
+                </ul>
+            </li>
+            <li>
+                <a href="#">Balances</a>
+                <ul class="menu-vertical">
+                </ul>
+            </li>
+            <li>
+                <a href="#">Ajustes</a>
+                <ul class="menu-vertical">
+                </ul>
+            </li>
+        </ul>
+    </nav>
 
     {% block body %} {% endblock %}
+    <script src="{{url_for('static', filename='js/principal.js')}} "></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 
