--- a/CARW/templates/layout.html
+++ b/CARW/templates/layout.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{url_for('static', filename='css/master.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/boostrap_css/bootstrap.min.css') }}">
 </head>
 
 <body>
@@ -45,6 +46,9 @@
 
     {% block body %} {% endblock %}
     <script src="{{url_for('static', filename='js/principal.js')}} "></script>
+    <script src="{{ url_for('static', filename='js/boostrap_js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/boostrap_js/bootstrap.bundle.min.js') }}"></script>
+
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 
