--- a/CARW/templates/main/Ppredeterminados.html
+++ b/CARW/templates/main/Ppredeterminados.html
@@ -1,10 +1,11 @@
 {% extends "./layout.html" %} {% block body %}
-<div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
+<div id="cambio" class="card-wrapper"></div>
+<img src="{{url_for('static', filename='img/logo.jpg')}}" class="card-img-top" alt="...">
+<div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a onclick="ver_paquetes()" class="btn btn-primary">Go somewhere</a>
 </div>
+</div>
+<script src="{{url_for('static', filename='js/Ppredeterminados.js')}} "></script>
 {% endblock %}
