--- a/CARW/templates/main/Ppredeterminados.html
+++ b/CARW/templates/main/Ppredeterminados.html
@@ -1,11 +1,20 @@
 {% extends "./layout.html" %} {% block body %}
-<div id="cambio" class="card-wrapper"></div>
-<img src="{{url_for('static', filename='img/logo.jpg')}}" class="card-img-top" alt="...">
-<div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a onclick="ver_paquetes()" class="btn btn-primary">Go somewhere</a>
+<div class="card mb-3" style="max-width: 540px;">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img src="{{url_for('static', filename='img/logo.jpg')}}" class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <a onclick="ver_paquetes()" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    </div>
 </div>
+<div id="cambio" class="container">
 </div>
-<script src="{{url_for('static', filename='js/Ppredeterminados.js')}} "></script>
+<script src="{{url_for('static', filename='js/Ppredeterminados.js')}} ">
+</script>
 {% endblock %}
