--- a/CARW/templates/main/login.html
+++ b/CARW/templates/main/login.html
@@ -1,4 +1,14 @@
-{% extends "./layout.html" %} {% block body %}
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <title>
+    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/master.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/boostrap_css/bootstrap.min.css') }}">
+</head>
 <div class="login-box">
     <img class="avatar" src="{{url_for('static', filename='img/logo.jpg')}}" alt="logo CW">
     <h1>Ingrese aqui</h1>
@@ -15,4 +25,10 @@
     </form>
 </div>
 <script src="{{url_for('static', filename='js/login.js')}} "></script>
-{% endblock %}
+<script src="{{ url_for('static', filename='js/boostrap_js/bootstrap.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/boostrap_js/bootstrap.bundle.min.js') }}"></script>
+
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+</body>
+
+</html>
