--- a/CARW/templates/main/Ppredeterminados.html
+++ b/CARW/templates/main/Ppredeterminados.html
@@ -1,18 +1,11 @@
 {% extends "./layout.html" %} {% block body %}
-<div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0">
-        <div class="col-md-4">
-            <img src="{{url_for('static', filename='img/logo.jpg')}}" class="img-fluid rounded-start" alt="...">
-        </div>
-        <div class="col-md-8">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <a onclick="ver_paquetes()" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </div>
-</div>
+<ul class="list-group">
+    <li class="list-group-item" onclick="ver_paquetes()">Mostrar Paquetes</li>
+    <li class="list-group-item">A second item</li>
+    <li class="list-group-item">A third item</li>
+    <li class="list-group-item">A fourth item</li>
+    <li class="list-group-item">And a fifth one</li>
+</ul>
 <div id="cambio" class="container">
 </div>
 <script src="{{url_for('static', filename='js/Ppredeterminados.js')}} ">
