vista y procedimientos de peditables

--- a/CARW/templates/layout.html
+++ b/CARW/templates/layout.html
@@ -15,10 +15,8 @@
     <nav>
         <ul class="menu-horizontal">
             <li>
-                <a href="#">Opciones De Lavado</a>
+                <a onclick="gopredeterminados()" style="color:#FFFFFF">Opciones De Lavado</a>
                 <ul class="menu-vertical">
-                    <li><a onclick="gopredeterminados()">Lavados Predeterminados </a></li>
-                    <li><a onclick="goeditables()">Lavados Editables</a></li>
                 </ul>
             </li>
             <li>
