--- a/CARW/templates/main/Ppredeterminados.html
+++ b/CARW/templates/main/Ppredeterminados.html
@@ -1,7 +1,7 @@
 {% extends "./layout.html" %} {% block body %}
 <ul class="list-group">
     <li class="list-group-item" onclick="ver_paquetes()">Mostrar Paquetes</li>
-    <li class="list-group-item">A second item</li>
+    <li class="list-group-item" onclick="goeditables()">Crear Paquete</li>
     <li class="list-group-item">A third item</li>
     <li class="list-group-item">A fourth item</li>
     <li class="list-group-item">And a fifth one</li>
