--- a/CARW/static/css/master.css
+++ b/CARW/static/css/master.css
@@ -159,7 +159,7 @@ nav {
 .mi-div {
     background-color: white;
     width: 400px;
-    height: 200px;
+    height: 250px;
     flex: 1;
     margin: 10px;
     border-radius: 2%;
@@ -196,4 +196,33 @@ nav {
 
 .list-group li:hover {
     background-color: red;
+}
+
+
+/* paquetes editables */
+
+.container2 {
+    width: 35%;
+    margin: 0 auto;
+    padding: 20px;
+    border: none;
+    box-sizing: border-box;
+    position: absolute;
+    right: 40%;
+    top: 20%;
+    background-color: rgba(255, 255, 255, 0.797);
+    border-radius: 5%;
+}
+
+.container3 {
+    width: 30%;
+    margin: 0 auto;
+    padding: 20px;
+    border: none;
+    box-sizing: border-box;
+    position: absolute;
+    right: 10%;
+    top: 20%;
+    background-color: rgba(255, 255, 255, 0.797);
+    border-radius: 5%;
 }
