actualizacion de tablas

--- a/CARW/templates/main/Peditables.html
+++ b/CARW/templates/main/Peditables.html
@@ -24,8 +24,8 @@
 <div class="container3">
     <h1 style="text-align: center;">Lista De Procedimientos</h1>
     </br>
-    <ul class="list-group2">
-        <li class="list-group-item" onclick="ver_paquetes()">Mostrar Paquetes</li>
+    <ul id="cambio" class=" list-group2 ">
+        <li class="list-group-item " onclick="ver_paquetes() ">Mostrar Paquetes</li>
     </ul>
 </div>
 {% endblock %}
