--- a/CARW/templates/main/Peditables.html
+++ b/CARW/templates/main/Peditables.html
@@ -1,10 +1,7 @@
 {% extends "./layout.html" %} {% block body %}
 <ul class="list-group">
-    <li class="list-group-item" onclick="ver_paquetes()">Mostrar Paquetes</li>
+    <li class="list-group-item" onclick="gopredeterminados2()">Regresar a Paquetes</li>
     <li class="list-group-item" onclick="goeditables()">Crear Paquete</li>
-    <li class="list-group-item">A third item</li>
-    <li class="list-group-item">A fourth item</li>
-    <li class="list-group-item">And a fifth one</li>
 </ul>
 <div class="container2">
     <form>
@@ -16,7 +13,14 @@
         <label for="valor paquete">Valor Total $</label>
         <input id="Valor" type="text" placeholder="$">
         </br>
+        </br>
+        <div class="container4">
+            <a></a>
+        </div>
+        </br>
         <button type="button" class="btn btn-info">Guardar</button>
+
+        <button type="button" class="btn btn-info">Descartar Lista</button>
         </br>
 
     </form>
@@ -25,7 +29,8 @@
     <h1 style="text-align: center;">Lista De Procedimientos</h1>
     </br>
     <ul id="cambio" class=" list-group2 ">
-        <li class="list-group-item " onclick="ver_paquetes() ">Mostrar Paquetes</li>
+        <li class="list-group-item " onclick="ver_procedimientos()">Mostrar Procedimientos</li>
     </ul>
 </div>
+<script src="{{url_for('static', filename='js/Peditables.js')}} "></script>
 {% endblock %}
