actualissasion de peditables y mejora de las funciones

--- a/CARW/templates/main/Peditables.html
+++ b/CARW/templates/main/Peditables.html
@@ -14,13 +14,12 @@
         <input id="Valor" type="text" placeholder="$">
         </br>
         </br>
-        <div class="container4">
-            <a></a>
+        <div id="miContainer" class="container4">
         </div>
         </br>
         <button type="button" class="btn btn-info">Guardar</button>
 
-        <button type="button" class="btn btn-info">Descartar Lista</button>
+        <button type="button" class="btn btn-danger" onclick="eliminarTodo()">Descartar Lista</button>
         </br>
 
     </form>
