creando js para guardar

--- a/CARW/templates/main/Peditables.html
+++ b/CARW/templates/main/Peditables.html
@@ -17,7 +17,7 @@
         <div id="miContainer" class="container4">
         </div>
         </br>
-        <button type="button" class="btn btn-info">Guardar</button>
+        <button type="button" class="btn btn-info" onclick="guardar_paquete()">Guardar</button>
 
         <button type="button" class="btn btn-danger" onclick="eliminarTodo()">Descartar Lista</button>
         </br>
