--- a/CARW/templates/main/Peditables.html
+++ b/CARW/templates/main/Peditables.html
@@ -3,6 +3,9 @@
     <li class="list-group-item" onclick="gopredeterminados2()">Regresar a Paquetes</li>
     <li class="list-group-item" onclick="goeditables()">Crear Paquete</li>
 </ul>
+<div id="alerta" class="alerta-exito oculto">
+    Paquete guardado con éxito!
+</div>
 <div class="container2">
     <form>
         <h1 style="text-align: center;">Diseñe Un Paquete</h1>
