--- a/CARW/static/css/master.css
+++ b/CARW/static/css/master.css
@@ -245,3 +245,21 @@ nav {
 .list-group2 li:hover {
     background-color: red;
 }
+
+.alerta-exito {
+    background-color: #4CAF50;
+    /* Color de fondo verde */
+    color: white;
+    /* Color del texto blanco */
+    padding: 10px;
+    /* Espacio interior */
+    margin-bottom: 10px;
+    /* Margen inferior */
+    border-radius: 5px;
+    /* Bordes redondeados */
+}
+
+.oculto {
+    display: none;
+    /* Oculta el elemento por defecto */
+}
