inicio de pasarela de pagos

--- a/CARW/static/css/master.css
+++ b/CARW/static/css/master.css
@@ -257,6 +257,9 @@ nav {
     /* Margen inferior */
     border-radius: 5px;
     /* Bordes redondeados */
+    position: absolute;
+    right: 63%;
+    top: 12%;
 }
 
 .oculto {
