--- a/CARW/templates/layout.html
+++ b/CARW/templates/layout.html
@@ -20,9 +20,8 @@
                 </ul>
             </li>
             <li>
-                <a href="#">Pagos</a>
+                <a onclick="gopagos()" style="color:#FFFFFF">Pagos</a>
                 <ul class="menu-vertical">
-                    <li><a href="#">Centro De Pago</a></li>
                 </ul>
             </li>
             <li>
