--- a/CARW/templates/main/Pagos.html
+++ b/CARW/templates/main/Pagos.html
@@ -8,9 +8,7 @@
         <label for="nombre Usuario">Usuario :</label>
         <select class="form-select" aria-label="Default select example">
             <option selected>Lista Usuarios</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
+            <option id="lusuarios" value="1">One</option>
           </select>
         </br>
         <label for="Matricula">Matricula: </label>
