--- a/CARW/templates/main/Pagos.html
+++ b/CARW/templates/main/Pagos.html
@@ -6,51 +6,49 @@
     <form>
         <h1 style="text-align: center;">Centro De Pagos</h1>
         <label for="nombre Usuario">Usuario :</label>
-        <select class="form-select" aria-label="Default select example">
-            <option selected>Lista Usuarios</option>
+        <select class="form-select" aria-label="Default select example" onclick="ver_usuarios()">
+            <option selected >Lista Usuarios</option>
             <option id="lusuarios" value="1">One</option>
           </select>
         </br>
         <label for="Matricula">Matricula: </label>
-        <li class="list-group-item"># De Matricula</li>
+        <li id="matri" class=" list-group-item "># De Matricula</li>
         </br>
-        <label for="Descripcion">Descripcion Del Vehiculo: </label>
-        <li class="list-group-item">,,</li>
+        <label for="Descripcion ">Descripcion Del Vehiculo: </label>
+        <li class="list-group-item ">,,</li>
         </br>
-        <label for="nombre paquete">Paquetes :</label>
-        <select class="form-select" aria-label="Default select example">
+        <label for="nombre paquete ">Paquetes :</label>
+        <select id="lpaquetes" class="form-select " aria-label="Default select example " onclick="ver_paquetes()">
             <option selected>Lista Paquetes</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
+            <option value="1 ">One</option>
           </select>
         </br>
-        <label for="valor paquete">Valor: </label>
-        <li class="list-group-item">$</li>
+        <label for="valor paquete ">Valor: </label>
+        <li class="list-group-item ">$</li>
         </br>
-        <label for="Fecha">Fecha: </label>
-        <li class="list-group-item" style="display: inline;">Dia/Mes/Año</li>
+        <label for="Fecha ">Fecha: </label>
+        <li class="list-group-item " style="display: inline; ">Dia/Mes/Año</li>
 
-        <label for="Duracion Proseso" style="display: inline;">Tiempo Estimado: </label>
-        <li class="list-group-item" style="display: inline;">00:00</li>
+        <label for="Duracion Proseso " style="display: inline; ">Tiempo Estimado: </label>
+        <li class="list-group-item " style="display: inline; ">00:00</li>
         </br>
         </br>
-        <button type="button" class="btn btn-danger" onclick="eliminarTodo()">Descartar</button>
+        <button type="button " class="btn btn-danger " onclick="eliminarTodo() ">Descartar</button>
         </br>
 
 
     </form>
 </div>
-<div class="container3">
-    <h1 style="text-align: center;">Descripcion Del Paquete</h1>
+<div class="container3 ">
+    <h1 style="text-align: center; ">Descripcion Del Paquete</h1>
     </br>
-    <div id="miContainer" class="container5">
+    <div id="miContainer " class="container5 ">
     </div>
     </br>
-    <button type="button" class="btn btn-info" onclick="guardar_paquete()">Pago Fisico</button>
+    <button type="button " class="btn btn-info " onclick="guardar_paquete() ">Pago Fisico</button>
 
-    <button type="button" class="btn btn-success" onclick="eliminarTodo()">Pago PSE</button>
+    <button type="button " class="btn btn-success " onclick="eliminarTodo() ">Pago PSE</button>
     </br>
 </div>
-<script src="{{url_for('static', filename='js/Pagos.js')}} "></script>
+<script src="{{url_for( 'static', filename='js/Pagos.js' )}} "></script>
 {% endblock %}
