--- a/CARW/templates/main/Pagos.html
+++ b/CARW/templates/main/Pagos.html
@@ -8,7 +8,7 @@
         <label for="nombre Usuario">Usuario :</label>
         <select class="form-select" aria-label="Default select example" onclick="ver_usuarios()">
             <option selected >Lista Usuarios</option>
-            <option id="lusuarios" value="1">One</option>
+            <option id="lusuarios">One</option>
           </select>
         </br>
         <label for="Matricula">Matricula: </label>
