--- a/CARW/templates/main/Pagos.html
+++ b/CARW/templates/main/Pagos.html
@@ -6,6 +6,12 @@
     <form>
         <h1 style="text-align: center;">Centro De Pagos</h1>
         <label for="nombre Usuario">Usuario :</label>
+        <div style="display: inline; ">
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
         <select class="form-select" aria-label="Default select example" onclick="ver_usuarios()">
             <option selected >Lista Usuarios</option>
             <option id="lusuarios">One</option>
