--- a/CARW/templates/main/Pagos.html
+++ b/CARW/templates/main/Pagos.html
@@ -6,8 +6,8 @@
     <form>
         <h1 style="text-align: center;">Centro De Pagos</h1>
         <label for="nombre Usuario">Usuario :</label>
-        <input id="lusuario" type="text" placeholder="coloque su usuario">
-        <button class="btn-login" type="submit" onclick="verificarCedula()">Buscar</button></br>
+        <input id="lusuario" type="text" placeholder="coloque la cedula">
+        <button class="btn-success" type="submit" onclick="verificarCedula()">Buscar</button></br>
         </br>
         <label for="Matricula">Matricula: </label>
         <li id="matri" class=" list-group-item "># De Matricula</li>
