--- a/CARW/templates/main/Pagos.html
+++ b/CARW/templates/main/Pagos.html
@@ -1,12 +1,12 @@
 {% extends "./layout.html" %} {% block body %}
-<div id="alerta" class="alerta-exito oculto">
-    Paquete guardado con éxito!
+<div id="alerta2" class="alerta-exito oculto">
+    Coloque una cedula!
 </div>
 <div class="container2">
     <form>
         <h1 style="text-align: center;">Centro De Pagos</h1>
         <label for="nombre Usuario">Usuario :</label>
-        <input id="lusuario" type="text" placeholder="coloque la cedula">
+        <input id="Ncedula" type="text" placeholder="coloque la cedula">
         <button class="button" onclick="verificarCedula()">Buscar</button></br>
         </br>
         <label for="Matricula">Matricula: </label>
@@ -33,7 +33,6 @@
         </br>
         <button type="button " class="btn btn-danger " onclick="eliminarTodo() ">Descartar</button>
         </br>
-
 
     </form>
 </div>
