--- a/CARW/templates/main/Peditables.html
+++ b/CARW/templates/main/Peditables.html
@@ -6,6 +6,9 @@
 <div id="alerta" class="alerta-exito oculto">
     Paquete guardado con éxito!
 </div>
+<div id="alerta2" class="alerta-campo-vacio oculto">
+    El titulo o los procedimientos estan vacios
+</div>
 <div class="container2">
     <form>
         <h1 style="text-align: center;">Diseñe Un Paquete</h1>
