segimos avanzando bien

--- a/CARW/templates/main/Pagos.html
+++ b/CARW/templates/main/Pagos.html
@@ -13,8 +13,20 @@
         <label for="matricula">Matricula:</label>
         <li id="Nmatricula" class="list-group-item" style="display: inline;"># De Matricula</li>
 
-        <label for="Duracion Proseso " style="display: inline; ">Tipo De Vehiculo: </label>
+        <label for="tipo vehiculo" style="display: inline; ">Tipo De Vehiculo: </label>
         <li id="Tvehiculo" class="list-group-item" style="display: inline;">---</li>
+        <br><br>
+        <label for="nombre-paquete">Paquete:</label>
+        <li id="Tpaquete" class="list-group-item" style="display: inline;">Tipo De Paquete</li>
+
+        <label for="valor" style="display: inline; ">Valor: </label>
+        <li id="Pvalor" class="list-group-item" style="display: inline;">$</li>
+        <br><br>
+        <label for="Fecha ">Fecha: </label>
+        <li id="Fecha" class="list-group-item " style="display: inline; ">Dia/Mes/Año</li>
+
+        <label for="Duracion Proseso " style="display: inline; ">Tiempo Estimado: </label>
+        <li id="Testimado" class="list-group-item " style="display: inline; ">00:00</li>
         </br>
     </form>
 </div>
