--- a/CARW/templates/main/Pagos.html
+++ b/CARW/templates/main/Pagos.html
@@ -37,7 +37,7 @@
     <div id="miContainer" class="container5">
     </div>
     <br>
-    <button type="button" class="btn btn-info" onclick="guardar_paquete()">Pago Físico</button>
+    <button type="button" class="btn btn-info" onclick="verificarpaquete(event)">Pago Físico</button>
 
     <button type="button" class="btn btn-success" onclick="eliminarTodo()">Pago PSE</button>
     <br>
