--- a/CARW/templates/main/Pagos.html
+++ b/CARW/templates/main/Pagos.html
@@ -24,7 +24,8 @@
         <br><br>
         <label for="Fecha ">Fecha: </label>
         <li id="Fecha" class="list-group-item " style="display: inline; ">Dia/Mes/Año</li>
-
+        <button class="btn btn-info" type="submit" onclick="obtenerFechaActual(event)">cargar</button>
+        <br><br>
         <label for="Duracion Proseso " style="display: inline; ">Tiempo Estimado: </label>
         <li id="Testimado" class="list-group-item " style="display: inline; ">00:00</li>
         </br>
