creacion de payu

--- a/CARW/static/css/master.css
+++ b/CARW/static/css/master.css
@@ -308,3 +308,10 @@ nav {
     max-height: 700px;
     height: 700px;
 }
+
+.payuL {
+    position: absolute;
+    right: 0%;
+    top: 10%;
+    height: 700px;
+}
