--- a/CARW/templates/main/Pagos.html
+++ b/CARW/templates/main/Pagos.html
@@ -42,9 +42,8 @@
     <button type="button" class="btn btn-info" onclick="verificarpaquete(event)">Pago Físico</button>
 
     <button type="button" class="btn btn-success" onclick="eliminarTodo()">Pago PSE</button>
-    <br>
 </div>
-
+<img class="payuL" src="{{ url_for('static', filename='img/Medios_Pago_Verde_Oscuro_120x60.jpg') }}" title="PayU - Medios de pago" alt="PayU - Medios de pago" width="120" height="600" />
 <script src="{{url_for('static', filename='js/Pagos.js')}}"></script>
 
 {% endblock %}
