--- a/CARW/templates/main/Pagos.html
+++ b/CARW/templates/main/Pagos.html
@@ -57,7 +57,7 @@
         <input name="currency" type="hidden" value="COP">
         <input name="signature" type="hidden" value="7ee7cf808ce6a39b17481c54f2c57acc">
         <input name="test" type="hidden" value="0">
-        <input id="CHB" name="buyerEmail" type="hidden" value="test@test.com">
+        <input name="buyerEmail" type="hidden" value="test@test.com">
         <input name="responseUrl" type="hidden" value="/Pagos">
         <input name="confirmationUrl" type="hidden" value="http://www.test.com/confirmation">
         <input name="Submit" type="image" src="{{ url_for('static', filename='img/boton_pagar_mediano.png') }}" alt="Enviar">
