--- a/CARW/templates/main/Pagos.html
+++ b/CARW/templates/main/Pagos.html
@@ -50,16 +50,16 @@
         <input name="merchantId" type="hidden" value="508029">
         <input name="accountId" type="hidden" value="512321">
         <input name="description" type="hidden" value="Test PAYU">
-        <input name="referenceCode" type="hidden" value="TestPayU">
-        <input name="amount" type="hidden" value="20000">
+        <input name="referenceCode" type="hidden" value="paquete/lavado2">
+        <input name="amount" type="hidden" value="25000">
         <input name="tax" type="hidden" value="3193">
         <input name="taxReturnBase" type="hidden" value="16806">
         <input name="currency" type="hidden" value="COP">
-        <input name="signature" type="hidden" value="7ee7cf808ce6a39b17481c54f2c57acc">
+        <input name="signature" type="hidden" value="4045cba445cd4ba05127a518f37b06b4">
         <input name="test" type="hidden" value="0">
         <input name="buyerEmail" type="hidden" value="test@test.com">
-        <input name="responseUrl" type="hidden" value="/Pagos">
-        <input name="confirmationUrl" type="hidden" value="http://www.test.com/confirmation">
+        <input name="responseUrl" type="hidden" value="http://192.168.1.8:5000/Pagos">
+        <input name="confirmationUrl" type="hidden" value="http://192.168.1.8:5000/Pagos">
         <input name="Submit" type="image" src="{{ url_for('static', filename='img/boton_pagar_mediano.png') }}" alt="Enviar">
     </form>
 
